khrenb kaka9to [v 0.1.3]

--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    android:id="@+id/drawer_layout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
@@ -10,22 +9,24 @@
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingTop="56dp" />
 
-    <include layout="@layout/view_toolbar_blur"/>
+    <include layout="@layout/view_toolbar_blur" />
 
     <android.support.design.widget.NavigationView
         android:id="@+id/navigation_view"
+        style="@style/ThemeToolbar.NavigationView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="@drawable/side_nav_bar_bckgrnd"
-        app:headerLayout="@layout/nav_header"
         android:fitsSystemWindows="false"
-        style="@style/ThemeToolbar.NavigationView"
+        app:headerLayout="@layout/nav_header"
         app:itemIconTint="@color/selector_home_navigation_view_icon"
         app:itemTextAppearance="@style/TextAppearance.Body2.Base"
         app:itemTextColor="@color/selector_home_navigation_view_text"
-        app:menu="@menu/navigation_view_menu"/>
+        app:menu="@menu/navigation_view_menu" />
 
 </android.support.v4.widget.DrawerLayout>
