khrenb kaka9to [v 0.1.4]

--- a/app/src/main/res/layout/fragment_stels.xml
+++ b/app/src/main/res/layout/fragment_stels.xml
@@ -22,7 +22,8 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:layout_marginStart="24dp"
-            android:max="255"
+            android:max="510"
+            android:progress="255"
             android:progressDrawable="@drawable/seek_bar"
             android:scaleX="2"
             app:layout_constraintStart_toStartOf="parent" />
@@ -33,7 +34,8 @@
             android:layout_height="match_parent"
             android:layout_gravity="end"
             android:layout_marginEnd="24dp"
-            android:max="255"
+            android:max="510"
+            android:progress="255"
             android:progressDrawable="@drawable/seek_bar"
             android:scaleX="2"
             app:layout_constraintEnd_toEndOf="parent" />
