--- a/app/src/main/res/layout/fragment_manual_control.xml
+++ b/app/src/main/res/layout/fragment_manual_control.xml
@@ -29,7 +29,7 @@
 
         </RelativeLayout>
 
-        <android.support.v4.view.ViewPager
+        <by.brstu.dmitry.garbagecollector.ui.viewPager.CustomViewPager
             android:id="@+id/manual_control_view_pager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -44,7 +44,7 @@
 
             </android.support.v4.view.PagerTabStrip>
 
-        </android.support.v4.view.ViewPager>
+        </by.brstu.dmitry.garbagecollector.ui.viewPager.CustomViewPager>
 
     </android.support.constraint.ConstraintLayout>
 
