--- a/app/src/main/res/layout/fragment_moves_recording.xml
+++ b/app/src/main/res/layout/fragment_moves_recording.xml
@@ -1,14 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clipToPadding="false"
-    android:paddingTop="56dp" >
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="@string/moves_recording"/>
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-</RelativeLayout>
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/moves_recording_container"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="@id/moves_recording_view_pager"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <Button
+                android:id="@+id/moves_recording_start"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toStartOf="@id/moves_recording_stop"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <Button
+                android:id="@+id/moves_recording_stop"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintStart_toEndOf="@id/moves_recording_start"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+
+        </android.support.constraint.ConstraintLayout>
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.4" />
+
+        <by.brstu.dmitry.garbagecollector.ui.viewPager.CustomViewPager
+            android:id="@+id/moves_recording_view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/guideline">
+
+            <by.brstu.dmitry.garbagecollector.ui.pagerTab.CustomPagerBar
+                android:id="@+id/pager_tab_moves_recording"
+                android:layout_width="match_parent"
+                android:layout_height="40dp">
+
+            </by.brstu.dmitry.garbagecollector.ui.pagerTab.CustomPagerBar>
+
+        </by.brstu.dmitry.garbagecollector.ui.viewPager.CustomViewPager>
+
+    </android.support.constraint.ConstraintLayout>
+
+</FrameLayout>
