--- a/ui/src/main/res/menu/navigation_view_menu.xml
+++ b/ui/src/main/res/menu/navigation_view_menu.xml
@@ -27,6 +27,10 @@
         <item
             android:id="@+id/auto_moving"
             android:title="@string/auto_moving" />
+
+        <item
+            android:id="@+id/object_following"
+            android:title="@string/object_following" />
     </group>
 
     <group
