--- a/ui/src/main/res/menu/navigation_view_menu.xml
+++ b/ui/src/main/res/menu/navigation_view_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group
         android:id="@+id/login_group"
-        android:checkableBehavior="none">
+        android:checkableBehavior="single">
         <item
             android:id="@+id/nav_login"
             android:icon="@drawable/ic_face_black"
