--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -19,8 +19,7 @@
             android:layout_height="match_parent"
             android:background="#00000000"
             android:scaleType="fitCenter"
-            android:src="@mipmap/ic_guest_background"
-           />
+            app:srcCompat="@drawable/ic_guest_background" />
 
         <TextView
             android:layout_width="match_parent"
@@ -45,7 +44,7 @@
             android:layout_height="match_parent"
             android:background="#00000000"
             android:scaleType="fitCenter"
-            android:src="@mipmap/ic_user_background" />
+            app:srcCompat="@drawable/ic_user_background" />
 
         <TextView
             android:layout_width="match_parent"
@@ -69,7 +68,7 @@
             android:layout_height="match_parent"
             android:background="#00000000"
             android:scaleType="fitCenter"
-            android:src="@mipmap/ic_admin_background" />
+            app:srcCompat="@drawable/ic_admin_background" />
 
         <TextView
             android:layout_width="match_parent"
