--- a/app/src/main/res/layout/fragment_manual_control.xml
+++ b/app/src/main/res/layout/fragment_manual_control.xml
@@ -13,7 +13,6 @@
             android:id="@+id/manual_container"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:foreground="?attr/selectableItemBackground"
             app:layout_constraintBottom_toTopOf="@id/manual_control_view_pager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +63,6 @@
                     android:layout_height="50dp"
                     android:layout_marginBottom="16dp"
                     android:paddingBottom="16dp"
-                    app:level="9"
                     app:warningLevel="15" />
 
                 <TextView
@@ -79,9 +77,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:paddingBottom="16dp"
-                    app:level="69"
+                    app:showValue="false"
                     app:reversedColors="true"
-                    app:warningLevel="80" />
+                    app:warningLevel="79" />
             </LinearLayout>
 
 
