--- a/app/src/main/res/layout/fragment_object_following.xml
+++ b/app/src/main/res/layout/fragment_object_following.xml
@@ -10,20 +10,20 @@
         android:layout_height="wrap_content">
 
         <Button
-            android:id="@+id/object_following_start_button"
+            android:id="@+id/object_following_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/object_following_start"
-            app:layout_constraintEnd_toStartOf="@id/object_following_stop_button"
+            app:layout_constraintEnd_toStartOf="@id/object_read_button"
             app:layout_constraintStart_toStartOf="parent" />
 
         <Button
-            android:id="@+id/object_following_stop_button"
+            android:id="@+id/object_read_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/object_following_stop"
+            android:text="@string/object_read_start"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/object_following_start_button" />
+            app:layout_constraintStart_toEndOf="@id/object_following_button" />
 
         <RadioGroup
             android:id="@+id/object_following_radio_group"
@@ -32,7 +32,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@id/object_following_start_button">
+            app:layout_constraintTop_toBottomOf="@id/object_following_button">
 
             <RadioButton
                 android:id="@+id/object_following_forward_sensor_radio"
@@ -49,11 +49,6 @@
                 android:layout_weight="1"
                 android:text="@string/backward_sensor"/>
         </RadioGroup>
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text=""/>
 
     </android.support.constraint.ConstraintLayout>
 
